more feedbacks taken into account